refactor: services, dtos and controller